--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "neo4j-driver": "^5.27.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^5.0.0",
     "react-tree-graph": "^8.0.3"
   },
   "devDependencies": {
