--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.3",
+    "@mui/lab": "^6.0.0-beta.26",
+    "@mui/material": "^6.4.3",
     "d3": "^7.9.0",
     "neo4j-driver": "^5.27.0",
     "react": "^18.3.1",
